--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    
+    <nav class="navigation container">
+        <div><a href="/"> Joo </a></div>
+        <ul class="page-link">
+            <li class="list-inline"><a href="/"> Home </a></li>
+            <li class="list-inline"><a href="/"> Projects </a></li>
+            <li class="list-inline"><a href="/"> Blog </a></li>
+
+
+        </ul>
+    </nav>
+
 </body>
 </html>
