--- a/index.html
+++ b/index.html
@@ -9,5 +9,53 @@
 </head>
 <body>
 
+    <nav class="navigation container">
+        <div class="nav-brand"><a href="/index.html" class="link link-active">Joo</a></div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline"><a href="/index.html" class="link link-active">home</a></li>
+            <li class="list-item-inline"><a href="/projects.html" class="link">projects</a></li>
+            <li class="list-item-inline"><a href="/blog.html" class="link">blog</a></li>
+
+        </ul>
+    </nav>
+
+    <header class="hero">
+        <img class="hero-image" src="images\hero.svg" alt="">
+        <h1 class="hero-heading">Jobby the <span style="color: var(--primary-color);">webdeveloper</span></h1>
+    </header>
+
+    <section class="ow">
+        <div class="container container-center">
+        <h3>Technologies</h3>
+        <p>HTML CSS JS UI/UX</p>
+        </div>
+    </section>
+
+    <section >
+        <div class="container container-center">
+            <h3>Projects</h3>
+            <p>Want to see my projects</p>
+            <a class="link link-primary" href="/projects.html">See Projects</a>
+        </div>
+    </section>
+    <section class="ow">
+        <div class="container container-center">
+        <h3>Blogs</h3>
+        <p>Explore my blog page</p>
+        <a class="link link-secondary" href="/blog.html">Browse Blogs</a>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-header">
+            <ul class="list-non-bullet">
+                <li class="list-item-inline"><a href="" class="link">Instagram</a></li>
+                <li class="list-item-inline"><a href="" class="link">Twitter</a></li>
+                <li class="list-item-inline"><a href="" class="link">LinkedIn</a></li>
+    
+            </ul>
+        </div>
+    </footer> 
+
 </body>
 </html>
